test/parser/closure-set-comprehension.b3.expect
Error:
21:     forall bx: Box trigger SetContains(%s, bx) ::
                               ^
expected '}'

